--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
         
         .month-button:hover,
         .week-button:hover {
-            background-color: var(--primary-color);
-            color: white;
+            background-color: white;
+            color: rgb(10, 10, 10);
             border-color: var(--primary-color);
             transform: none; /* 拡大しすぎない */
         }
@@ -360,8 +360,8 @@
         }
         
         .calendar td.unavailable {
-            color: #ccc;
-            background-color: #fdfdfd;
+            color: #fdfdfd;
+            background-color: #cccccc;
             pointer-events: none;
         }
 
@@ -583,9 +583,9 @@
             </div>
             <div class="info-text">▼メニューをお選びください▼</div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-category="産後ケア"
+                <button type="button" onclick="selectSymptom(this)" data-category="産後ケア"
                     data-price="0">産後ケア・昼食あり（6時間）</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-category="産後ケア"
+                <button type="button" onclick="selectSymptom(this)" data-category="産後ケア"
                     data-price="0">産後ケア・昼食あり（7時間）</button>
                 <button type="button" onclick="selectSymptom(this)" data-category="産後ケア"
                     data-price="0">産後ケア・昼食あり（8時間）</button>
