--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
         .visit-buttons button:hover,
         .symptoms button:hover,
         .menu-sections button:hover {
-            background-color: var(--light-green);
-            color: var(--dark-green);
+            background-color: var(--dark-green);
+            color: var(--white);
         }
         
         .menu-section { display: none; }
