--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             border: 1px solid var(--primary-color);
             position: relative;
             z-index: 5;
-            box-shadow: 0 0 0 2px rgba(240, 75, 69, 0.4);
+            box-shadow: 0 0 0 2px #7dcbf5;
         }
 
         /* 選択中のセルにはチェックマークなどを出す場合 */
