--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         :root {
             /* メインカラー: 優しい黄色 (少し濃いめのマスタードイエローで視認性を確保) */
             /* 元: #1b2a4e (Navy) */
-            --primary-color: #f0c645;
+            --primary-color: #faff3e;
 
             /* アクセント: 優しい水色 */
             /* 元: #c5a059 (Gold) */
-            --accent-color: #7dcbf5;
+            --accent-color: #00c6f4;
 
             /* テキスト色（メイン背景上の文字色）: こげ茶色 (黄色背景でも読みやすく) */
             --text-on-primary: #5d4a35;
@@ -65,8 +65,8 @@
 
         /* --- 見出し (H1) --- */
         h1 {
-            background: var(--primary-color);
-            color: var(--text-on-primary); /* 黄色背景なので濃い文字に変更 */
+            background: #faff3e;
+            color: #00c6f4; /* 黄色背景なので濃い文字に変更 */
             padding: 20px 15px;
             margin: -25px -25px 30px -25px;
             font-size: 22px;
@@ -689,15 +689,15 @@
             padding: 18px;
             font-size: 18px;
             font-weight: bold;
-            background: linear-gradient(135deg, var(--primary-color), #e3b04b);
-            color: var(--text-on-primary); /* 黄色背景用文字色 */
+            background: linear-gradient(135deg, var(--primary-color), #faff3e);
+            color: #00c6f4; /* 黄色背景用文字色 */
             border: none;
             border-radius: 4px;
             cursor: pointer;
             margin-top: 10px;
             box-shadow: 0 4px 10px rgba(240, 198, 69, 0.3);
             transition: transform 0.1s, box-shadow 0.3s;
-            border-bottom: 4px solid #dbaa30; /* 少し濃い黄色 */
+            border-bottom: 4px solid #00c6f4; /* 少し濃い黄色 */
         }
 
         .submit-button:active {
@@ -728,7 +728,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            color: var(--text-on-primary); /* 文字色変更 */
+            color: #00c6f4; /* 文字色変更 */
             text-decoration: none;
             font-size: 10px;
             margin: 0;
@@ -1240,7 +1240,7 @@ function updateDisplayInfo() {
                 let hours = Math.floor(totalMinutes / 60);
                 let minutes = totalMinutes % 60;
                 let timeText = (hours > 0 ? hours + '時間' : '') + (minutes > 0 ? minutes + '分' : '');
-                dateDisplay = `${selectedFullDate} <span style="font-size:12px; color:#888; margin-left:5px;">(所要 ${timeText})</span>`;
+                dateDisplay = `${selectedFullDate} </span>`;
             }
 
             // メニュー表示の生成
