--- a/index.html
+++ b/index.html
@@ -39,31 +39,26 @@
                               radial-gradient(circle at bottom left, #fff8e1 0%, transparent 40%);
             color: var(--text-main);
             margin: 0;
-            padding-bottom: 120px; /* フッター用余白 */
+            padding-bottom: 40px; /* 固定フッターがなくなったので通常の余白に変更 */
             line-height: 1.6;
             min-height: 100vh;
         }
 
-        /* ヘッダー */
+        /* ヘッダー（固定解除・デザイン調整） */
         header {
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            background: rgba(255, 255, 255, 0.85);
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-            box-shadow: 0 4px 20px rgba(0,0,0,0.03);
-            padding: 16px 20px;
+            /* position: sticky; を削除 */
+            padding: 40px 20px 20px;
             text-align: center;
+            background: transparent; /* 背景色なしで馴染ませる */
         }
 
         h1 {
             font-family: 'Zen Old Mincho', serif;
-            font-size: 18px;
+            font-size: 22px; /* 少し大きく */
             margin: 0;
             color: var(--primary);
             letter-spacing: 0.05em;
+            line-height: 1.4;
         }
 
         .container {
@@ -203,10 +198,9 @@
             transition: var(--transition);
             position: relative;
             overflow: hidden;
-            user-select: none; /* 連打時の選択防止 */
+            user-select: none;
         }
 
-        /* チェックマーク用（疑似要素） */
         .chip::after {
             content: '✓';
             position: absolute;
@@ -226,7 +220,7 @@
             border-color: var(--primary);
             box-shadow: 0 4px 12px rgba(106, 76, 156, 0.3);
             font-weight: 500;
-            padding-left: 20px; /* チェックマーク分の余白 */
+            padding-left: 20px;
         }
 
         .chip.active::after {
@@ -239,37 +233,33 @@
             margin: 8px 0 0 4px;
         }
 
-        /* 送信エリア */
+        /* 送信エリア（固定解除） */
         .submit-area {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background: rgba(255,255,255,0.9);
-            backdrop-filter: blur(10px);
-            padding: 10px 20px 30px;
-            box-shadow: 0 -4px 20px rgba(0,0,0,0.05);
-            z-index: 90;
+            /* position: fixed; を削除し、通常の配置へ */
+            margin-top: 40px;
+            padding: 20px 20px 40px;
             text-align: center;
+            background: transparent;
+            box-shadow: none;
         }
 
         .thank-you-msg {
             font-family: 'Zen Old Mincho', serif;
             color: var(--primary);
-            font-size: 14px;
-            margin-bottom: 12px;
+            font-size: 16px;
+            margin-bottom: 20px;
             font-weight: bold;
         }
 
         .submit-btn {
             width: 100%;
             max-width: 600px;
-            padding: 16px;
+            padding: 18px; /* 少し大きく */
             border: none;
             border-radius: 50px;
             background: linear-gradient(135deg, var(--primary), #4A3075);
             color: #FFF;
-            font-size: 16px;
+            font-size: 18px;
             font-weight: bold;
             letter-spacing: 0.1em;
             box-shadow: 0 8px 20px rgba(106, 76, 156, 0.3);
@@ -300,7 +290,7 @@
         
         <div class="intro-card">
             <div class="intro-text">
-                以下のアンケートにご協力をお願いいたします。
+                以下のアンケートにご協力をお願いいたします。<br>
             </div>
         </div>
 
@@ -329,8 +319,7 @@
                 <div class="chip" onclick="toggleChip(this)">ジェル</div>
                 <div class="chip" onclick="toggleChip(this)">クリーム</div>
                 <div class="chip" onclick="toggleChip(this)">その他</div>
-                <div class="chip" onclick="toggleChip(this)">オールインワン</div>
-                <div class="chip" onclick="toggleChip(this)">不使用</div>
+                <div class="chip" onclick="toggleChip(this)">不要</div>
             </div>
             <p class="desc-text">よろしければお使いのメーカーやタイプをご記入ください</p>
             <div class="input-group" style="margin-top:15px;">
@@ -340,12 +329,11 @@
 
             <label class="sub-label">(2) 洗顔</label>
             <div class="select-group wash-buttons">
-                <div class="chip" onclick="toggleChip(this)">固形ソープ</div>
+                <div class="chip" onclick="toggleChip(this)">固形</div>
                 <div class="chip" onclick="toggleChip(this)">チューブ</div>
-                <div class="chip" onclick="toggleChip(this)">泡ホップ</div>
+                <div class="chip" onclick="toggleChip(this)">泡タイプ</div>
                 <div class="chip" onclick="toggleChip(this)">その他</div>
-                <div class="chip" onclick="toggleChip(this)">オールインワン</div>
-                <div class="chip" onclick="toggleChip(this)">不使用</div>
+                <div class="chip" onclick="toggleChip(this)">不要</div>
             </div>
             <p class="desc-text">よろしければお使いのメーカーやタイプをご記入ください</p>
             <div class="input-group" style="margin-top:15px;">
@@ -370,7 +358,6 @@
             <div class="select-group serum-buttons">
                 <div class="chip" onclick="toggleChip(this)">保湿</div>
                 <div class="chip" onclick="toggleChip(this)">美白</div>
-                <div class="chip" onclick="toggleChip(this)">リンクル</div>
                 <div class="chip" onclick="toggleChip(this)">シワ</div>
                 <div class="chip" onclick="toggleChip(this)">毛穴</div>
                 <div class="chip" onclick="toggleChip(this)">その他</div>
@@ -384,7 +371,7 @@
 
             <label class="sub-label">(5) 保護</label>
             <div class="select-group protection-buttons">
-                <div class="chip" onclick="toggleChip(this)">乳液(ミルク)</div>
+                <div class="chip" onclick="toggleChip(this)">乳液</div>
                 <div class="chip" onclick="toggleChip(this)">クリーム</div>
                 <div class="chip" onclick="toggleChip(this)">その他</div>
                 <div class="chip" onclick="toggleChip(this)">不使用</div>
@@ -403,17 +390,18 @@
                 <div class="chip" onclick="toggleChip(this)">アレルギー</div>
                 <div class="chip" onclick="toggleChip(this)">特になし</div>
             </div>
+            <p class="desc-text">よろしければお使いのメーカーやタイプをご記入ください</p>
             <div class="input-group" style="margin-top:15px;">
                 <textarea id="troubleDetail" rows="3" placeholder=" "></textarea>
                 <label class="floating-label">詳細があればご記入ください</label>
             </div>
         </div>
 
-    </div>
+        <div class="submit-area">
+            <div class="thank-you-msg">ご協力ありがとうございました。</div>
+            <button class="submit-btn" onclick="submitForm()">この内容で送信する</button>
+        </div>
 
-    <div class="submit-area">
-        <div class="thank-you-msg">ご協力ありがとうございました。</div>
-        <button class="submit-btn" onclick="submitForm()">この内容で送信する</button>
     </div>
 
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
