--- a/index.html
+++ b/index.html
@@ -539,6 +539,14 @@
             </div>
         </div>
 
+        <div id="baindLabel1" class="input-group" style="display:none; margin-top:20px;">
+            <input type="text" id="venue" placeholder=" " oninput="saveInput('venue')">
+            <label>会場名 <span class="required">*</span></label>
+        </div>
+        <div id="baindButtons1" style="display:none;"></div> <div id="baindLabel2" class="input-group" style="display:none;">
+             <input type="text" id="weddingDate" placeholder="例）2025年10月10日" oninput="saveInput('weddingDate')">
+            <label>ご婚礼日 <span class="required">*</span></label>
+        </div>
         <div id="baindButtons2" style="display:none;"></div> <div class="section-label">希望日時 <span class="required">*</span></div>
         <div class="calendar-container">
             <div class="current-month" id="currentMonth">2025年 1月</div>
@@ -719,6 +727,8 @@
             document.querySelectorAll('.symptoms button, .irradiations button').forEach(b => b.classList.remove('active'));
             
             // 会場・日時入力のリセット
+            document.getElementById('venue').value = '';
+            document.getElementById('weddingDate').value = '';
             document.getElementById('baindLabel1').style.display = 'none';
             document.getElementById('baindLabel2').style.display = 'none';
 
