--- a/index.html
+++ b/index.html
@@ -434,15 +434,15 @@
                       `  GPROルーム         〘 ${gproMark} 〙\n\n` +
 
                       `◈ 第1希望\n` +
-                      `        ${formatDate(d1_day)}      ${d1_time}頃\n`;
+                      `      ${formatDate(d1_day)}${d1_time}\n`;
 
             if (d2_day && d2_time) {
                 msg += `◈ 第2希望\n` +
-                       `        ${formatDate(d2_day)}      ${d2_time}頃\n`;
+                       `      ${formatDate(d2_day)}${d2_time}\n`;
             }
             if (d3_day && d3_time) {
                 msg += `◈ 第3希望\n` +
-                       `        ${formatDate(d3_day)}      ${d3_time}頃\n`;
+                       `      ${formatDate(d3_day)}${d3_time}\n`;
             }
 
             if (!liff.isInClient()) {
