--- a/index.html
+++ b/index.html
@@ -1210,7 +1210,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n店舗名：株式会社クリーンサービスさくら\n\n《お名前》\n${formData.name}\n《電話番号》\n${formData.phone}\n《住所》\n${formData.address}\n《駐車場の有無》\n${formData.parking}\n\n《メニュー》\n・${finalSymptomText}\n\n【希望日】\n《第一希望日》\n${formatDate(formData.dates[0])}\n\n《第二希望日》\n${formatDate(formData.dates[1])}\n\n《第三希望日》\n${formatDate(formData.dates[2])}\n\n《備考》\n${formData.message}`
+                text: `【予約フォーム送信】\n店舗名：株式会社クリーンサービスさくら\n\n━━━━━━━━━━━━━━\n👤 お客様情報\n━━━━━━━━━━━━━━\n[お名前]\n${formData.name} 様\n\n[電話番号]\n${formData.phone}\n\n[住所]\n${formData.address}\n\n[駐車場の有無]\n${formData.parking}\n\n━━━━━━━━━━━━━━\n📋 ご希望メニュー\n━━━━━━━━━━━━━━\n${finalSymptomText}\n\n━━━━━━━━━━━━━━\n📅 ご希望日程\n━━━━━━━━━━━━━━\n[第一希望]\n${formatDate(formData.dates[0])}\n\n[第二希望]\n${formatDate(formData.dates[1])}\n\n[第三希望]\n${formatDate(formData.dates[2])}\n\n━━━━━━━━━━━━━━\n💬 備考\n━━━━━━━━━━━━━━\n${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('確認してご連絡差し上げます。');
