--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             });
 
             liff.init({
-                liffId: '2009039124-7xeweG9X'
+                liffId: '2005254357-zKma9BZk'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
