--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
             const dateStr = formatDate(selectedDate);
             const msg = document.getElementById('message').value;
 
-            const text = `【予約フォーム】\nお名前：${name}\n電話番号：${phone}\n来店回数：${visitType === 'new' ? '新規' : '再来'}\nメニュー：${menuNames}\n希望日時：${dateStr}\n備考：${msg}`;
+            const text = `【予約フォーム】\nお名前：${name}\n電話番号：${phone}\n来店回数：${visitType === 'new' ? '新規' : '再来'}\nメニュー：${menuNames}\n希望日時：\n${dateStr}\n備考：${msg}`;
 
             liff.sendMessages([{ type: 'text', text: text }])
                 .then(() => {
