--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
         }
 
         function formatDate(d) {
-            return `${d.getFullYear()}/${d.getMonth() + 1}/${d.getDate()} ${('0' + d.getHours()).slice(-2)}:${('0' + d.getMinutes()).slice(-2)}`;
+            return `${d.getFullYear()}年${('0' + (d.getMonth() + 1)).slice(-2)}月${('0' + d.getDate()).slice(-2)}日 ${('0' + d.getHours()).slice(-2)}:${('0' + d.getMinutes()).slice(-2)}`;
         }
 
         function submitForm() {
